<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.crypto_chat.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="이름:"
            android:inputType="textPersonName"
            android:layout_margin="8dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:imeActionId="@integer/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName"
            android:maxLength="14"
            android:maxLines="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="학번:"
            android:inputType="textPersonName"
            android:layout_margin="8dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ID"
            android:imeActionId="@integer/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName"
            android:maxLength="14"
            android:maxLines="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="비밀번호:"
            android:inputType="textPersonName"
            android:layout_margin="8dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_Password"
            android:imeActionId="@integer/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLength="14"
            android:maxLines="1" />
    </LinearLayout>
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_on"
            android:textStyle="bold" />
        <Button
            android:id="@+id/sign_up_skip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_skip"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>